# nano-stat

./: README.md  overlay.html  package-lock.json  package.json  vite.config.ts
scripts/: generate-ico.js  generate-icons.js  生成图标.md
src/: App.tsx  overlay.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/hardware/: cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  network.rs  types.rs
src/api/: hardware.ts
src/components/: OverlayPanel.tsx  SettingsDialog.tsx  Sidebar.tsx  TitleBar.tsx  UpdateDialog.tsx
src/components/hardware/: CpuCard.tsx  DiskCard.tsx  GpuCard.tsx  HardwareOverviewSection.tsx  MemoryCard.tsx  NetworkCard.tsx  index.ts
src/hooks/: useAppVersion.ts  useHardwareData.ts  useMonitorSettings.ts  useTheme.tsx
src/pages/: AboutPage.tsx  HomePage.tsx  MonitorPage.tsx
src/styles/: globals.css  overlay.css
src/types/: hardware.ts
