[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
# 配置文件目录
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 系统信息采集库
sysinfo = "0.32"
# 网络信息采集
systemstat = "0.2"
# 异步运行时
tokio = { version = "1", features = ["full"] }
# NVIDIA GPU 信息采集
nvml-wrapper = "0.10"
# Windows WMI 支持 (用于 AMD/Intel 集显)
wmi = "0.14"
# 时间处理
chrono = "0.4"
# 延迟初始化
once_cell = "1.19"

